--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,3 +87,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - images/1.png
